--- a/html/find_id_result.html
+++ b/html/find_id_result.html
@@ -25,8 +25,10 @@
         ><button id="find_id_result_login_button">로그인하기</button></a
       >
       <a href="./find_id_pw.html"
-        ><button id="find_id_result_back_button">뒤로하기</button></a
+        ><button id="find_id_result_back_button">뒤로가기</button></a
       >
     </div>
   </body>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="../js/find_id_result.js"></script>
 </html>
