--- a/html/home_logout.html
+++ b/html/home_logout.html
@@ -30,4 +30,6 @@
       </a>
     </div>
   </body>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="../js/home_logout.js"></script>
 </html>
