--- a/html/login.html
+++ b/html/login.html
@@ -78,5 +78,6 @@
       </div>
     </div>
   </body>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="../js/login.js"></script>
 </html>
