--- a/html/pw_reset.html
+++ b/html/pw_reset.html
@@ -9,7 +9,7 @@
   <body>
     <hr />
     <div class="pw_reset_header">
-      <a href="./find_id_pw.html" id="pw_reset_arrow"
+      <a href="./find_id.html" id="pw_reset_arrow"
         ><img src="../img/arrow.png" />
       </a>
       <p>비밀번호 재설정</p>
