--- a/html/request_list.html
+++ b/html/request_list.html
@@ -49,91 +49,90 @@
         <p>*지역이 맞는지 확인해주세요</p>
       </div>
       <div class="wrap_request_container">
-        <div class="request_container">
+        <!-- <div class="request_container">
           <div class="top_container">
             <div class="title_container">
-              <div>제목</div>
+              <div class="title">제목</div>
             </div>
             <div class="point_container">
               <img src="../img/stamp.png" />
-              <div>2000P</div>
+              <div class="point">2000P</div>
             </div>
             <div class="chat_container">
               <img src="../img/chat.png" />
-              <div>5명</div>
+              <div class="chatpeople">5명</div>
             </div>
           </div>
           <div class="content_container">
-            <div>내용</div>
+            <div class="content">내용</div>
           </div>
         </div>
 
         <div class="request_container">
           <div class="top_container">
             <div class="title_container">
-              <div>제목</div>
+              <div class="title">제목</div>
             </div>
             <div class="point_container">
               <img src="../img/stamp.png" />
-              <div>2000P</div>
+              <div class="point">2000P</div>
             </div>
             <div class="chat_container">
               <img src="../img/chat.png" />
-              <div>5명</div>
+              <div class="chatpeople">5명</div>
             </div>
           </div>
           <div class="content_container">
-            <div>내용</div>
+            <div class="content">내용</div>
           </div>
         </div>
 
         <div class="request_container">
           <div class="top_container">
             <div class="title_container">
-              <div>제목</div>
+              <div class="title">제목</div>
             </div>
             <div class="point_container">
               <img src="../img/stamp.png" />
-              <div>2000P</div>
+              <div class="point">2000P</div>
             </div>
             <div class="chat_container">
               <img src="../img/chat.png" />
-              <div>5명</div>
+              <div class="chatpeople">5명</div>
             </div>
           </div>
           <div class="content_container">
-            <div>내용</div>
+            <div class="content">내용</div>
           </div>
         </div>
 
         <div class="request_container">
           <div class="top_container">
             <div class="title_container">
-              <div>제목</div>
+              <div class="title">제목</div>
             </div>
             <div class="point_container">
               <img src="../img/stamp.png" />
-              <div>2000P</div>
+              <div class="point">2000P</div>
             </div>
             <div class="chat_container">
               <img src="../img/chat.png" />
-              <div>5명</div>
+              <div class="chatpeople">5명</div>
             </div>
           </div>
           <div class="content_container">
-            <div>내용</div>
-          </div>
-        </div>
+            <div class="content">내용</div>
+          </div> -->
       </div>
 
       <div class="request_list_footer">
-        <a href="#" id="footer_back"><img src="../img/arrow.png" /></a>
+        <!-- <a href="#" id="footer_back"><img src="../img/arrow.png" /></a>
         <a href="#" id="footer_1">1</a>
         <a href="#" id="footer_2">2</a>
         <a href="#" id="footer_3">3</a>
         <a href="#" id="footer_4">4</a>
         <a href="#" id="footer_5">5</a>
-        <a href="#" id="footer_next"><img src="../img/arrow_reverse.png" /></a>
+        <a href="#" id="footer_next"><img src="../img/arrow_reverse.png" /></a> -->
       </div>
     </div>
   </body>
