--- a/html/find_id_pw.html
+++ b/html/find_id_pw.html
@@ -96,5 +96,6 @@
       </div>
     </div>
   </body>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="../js/find_id_pw.js"></script>
 </html>
