--- a/html/solve.html
+++ b/html/solve.html
@@ -31,7 +31,7 @@
       </div>
       <div class="nav_logout">
         <img src="../img/logout.png" alt="" />
-        <a href="./home_logout.html">로그아웃</a>
+        <a href="#" class="logout">로그아웃</a>
       </div>
       <div class="nav_mypage">
         <img src="../img/mypage.png" alt="" />
@@ -60,11 +60,11 @@
               <div class="chatnum">5명</div>
             </div>
             <div class="detail_time">
-              <div>2023.07.21 23:00</div>
+              <div class="created_at">2023.07.21 23:00</div>
             </div>
           </div>
           <div class="detail_right">
-            <a onclick="reportCheck();">신고하기</a>
+            <a href="#" onclick="reportCheck();">신고하기</a>
           </div>
         </div>
         <div class="content_container">내용</div>
