--- a/html/home_login.html
+++ b/html/home_login.html
@@ -10,7 +10,7 @@
     <div class="nav_bar">
       <div class="nav_logout">
         <img src="../img/logout.png" />
-        <a href="./home_logout.html">로그아웃</a>
+        <a href="#" class="logout">로그아웃</a>
       </div>
       <div class="nav_mypage">
         <img src="../img/mypage.png" />
