--- a/html/request.html
+++ b/html/request.html
@@ -31,7 +31,7 @@
       </div>
       <div class="nav_logout">
         <img src="../img/logout.png" alt="" />
-        <a href="./home_logout.html">로그아웃</a>
+        <a href="#" class="logout">로그아웃</a>
       </div>
       <div class="nav_mypage">
         <img src="../img/mypage.png" alt="" />
