회원가입 ajax 수정

--- a/html/find_id_pw.html
+++ b/html/find_id_pw.html
@@ -50,11 +50,7 @@
           </div>
           <div class="birth_content">
             <p>생년월일</p>
-            <input
-              id="findID_birth_input"
-              type="text"
-              placeholder="(19990807)"
-            />
+            <input id="findID_birth_input" type="text" placeholder="990807" />
           </div>
           <div class="findID_error">
             <p id="findID_error">이름/생년월일을 확인해주세요</p>
