--- a/html/login.html
+++ b/html/login.html
@@ -44,16 +44,16 @@
       </div>
       <div class="wrap_login_button">
         <button id="email_login_button">
-          <a href="#">이메일로 로그인하기</a>
+          <a href="#">로그인하기</a>
         </button>
-        <button id="google_login_button">
-          <div>
+        <!-- <button id="google_login_button"> -->
+        <!-- <div>
             <img src="../img/google.png" />
             <a>구글 아이디로 로그인</a>
             <div></div>
           </div>
         </button>
-        <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
+        <div class="g-signin2" data-onsuccess="onSignIn"></div>
         <div
           id="g_id_onload"
           data-client_id="604551010190-le65f4l8v56l9emnmfb3cntcqnnctc5a.apps.googleusercontent.com"
@@ -69,12 +69,12 @@
           data-text="sign_in_with"
           data-shape="pill"
           data-logo_alignment="left"
-        ></div>
+        ></div> -->
       </div>
       <div class="login_footer">
         <a href="./signup.html">회원가입&nbsp; </a>
         <a href="#">|&nbsp; </a>
-        <a href="./find_id_pw.html">이메일/비밀번호 찾기</a>
+        <a href="./find_id_pw.html">아이디/비밀번호 찾기</a>
       </div>
     </div>
   </body>
