--- a/html/pw_reset.html
+++ b/html/pw_reset.html
@@ -9,7 +9,7 @@
   <body>
     <hr />
     <div class="pw_reset_header">
-      <a href="./find_id.html" id="pw_reset_arrow"
+      <a href="./find_id_pw.html" id="pw_reset_arrow"
         ><img src="../img/arrow.png" />
       </a>
       <p>비밀번호 재설정</p>
@@ -48,13 +48,13 @@
       <div class="pw_reset_content">
         <div class="pw_content">
           <p>비밀번호</p>
-          <input id="pw_reset_input" type="text" placeholder="비밀번호" />
+          <input id="pw_reset_input" type="password" placeholder="비밀번호" />
         </div>
         <div class="pwcheck_content">
           <p>비밀번호 확인</p>
           <input
             id="pw_reset_pwcheck_input"
-            type="text"
+            type="password"
             placeholder="비밀번호 확인"
           />
         </div>
@@ -69,5 +69,6 @@
       </div>
     </div>
   </body>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="../js/pw_reset.js"></script>
 </html>
