--- a/html/request.html
+++ b/html/request.html
@@ -44,7 +44,8 @@
         <a href="#" id="request_box">도움 요청하기</a>
         <div class="region_name">
           <img src="../img/pin.png" />
-          <div class="region_choose">지역이름</div>
+          <div class="region_choose" onclick="toggleDropdown()">지역이름</div>
+          <div class="dropdown" onclick="selectRegion"></div>
         </div>
         <p>*지역이 맞는지 확인해주세요</p>
       </div>
