--- a/html/signup.html
+++ b/html/signup.html
@@ -30,13 +30,13 @@
               <div class="check_message">
                 <p id="email_check_message">중복 확인이 완료되었습니다. 인증을 완료해주세요.</p>
                 <p id="email_duplicate_message">이미 존재하는 아이디입니다</p>
-                <p id="certified_check_message">인증번호가 확인되었습니다.</p>
+                <!-- <p id="certified_check_message">인증번호가 확인되었습니다.</p> -->
               </div>
             </div>
 
             <div class="signup_content">
               <p>비밀번호</p>
-              <input id="password_input" type="text" placeholder="비밀번호" oninput="checkPasswordMatch()"
+              <input id="password_input" type="password" placeholder="비밀번호" oninput="checkPasswordMatch()"
               />
             </div>
 
@@ -44,7 +44,7 @@
               <p>비밀번호 확인</p>
               <input
                 id="pw_check_input"
-                type="text"
+                type="password"
                 placeholder="비밀번호 확인"
                 oninput="checkPasswordMatch()"
 
