--- a/html/solve_self.html
+++ b/html/solve_self.html
@@ -44,7 +44,82 @@
         <a href="#" id="solve_box2">도움 해결하기</a>
         <div class="region_name">
           <img src="../img/pin.png" />
-          <div class="region_choose">지역이름</div>
+          <div class="region_choose" onclick="toggleDropdown()">지역이름</div>
+          <ul class="dropdown" id="dropdown">
+            <li class="dropdown-option" onclick="selectRegion('강남구')">
+              강남구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('강동구')">
+              강동구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('강북구')">
+              강북구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('강서구')">
+              강서구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('관악구')">
+              관악구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('광진구')">
+              광진구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('구로구')">
+              구로구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('금천구')">
+              금천구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('노원구')">
+              노원구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('도봉구')">
+              도봉구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('동대문구')">
+              동대문구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('동작구')">
+              동작구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('마포구')">
+              마포구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('서대문구')">
+              서대문구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('서초구')">
+              서초구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('성동구')">
+              성동구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('성북구')">
+              성북구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('송파구')">
+              송파구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('양천구')">
+              양천구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('영등포구')">
+              영등포구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('용산구')">
+              용산구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('은평구')">
+              은평구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('종로구')">
+              종로구
+            </li>
+            <li class="dropdown-option" onclick="selectRegion('중구')">중구</li>
+            <li class="dropdown-option" onclick="selectRegion('중랑구')">
+              중랑구
+            </li>
+          </ul>
         </div>
       </div>
       <div class="solve_container">
