--- a/html/chat.html
+++ b/html/chat.html
@@ -133,13 +133,13 @@
                             <div class="wrap_send">
                                 <img src="../img/plus_btn.png" alt="">
                                 <img src="../img/emoticon_btn.png" alt="" class="emoticon_btn">
-                                <div class="wrap_number">
+                                <!-- <div class="wrap_number">
                                     <p>0</p>
                                     <p class="char_num">/100</p>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="wrap_send_btn">
-                                <button class="send_btn" onclick="submit()">보내기</button>
+                                <button class="send_btn">보내기</button>
                             </div>
                         </div>
                     </div>
