게시물 채팅 ajax 추가

--- a/html/solve.html
+++ b/html/solve.html
@@ -145,7 +145,7 @@
         <div class="content_container">내용</div>
       </div>
       <div class="solve_button">
-        <a href="./chat.html"><button id="solve_button">채팅하기</button></a>
+        <a href="#"><button id="solve_button">채팅하기</button></a>
       </div>
     </div>
   </body>
