--- a/html/my_post.html
+++ b/html/my_post.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/my_post.css" />
-    <title>내가 쓴 게시물</title>
+    <title>손에 손 잡고</title>
 </head>
 
 <body>
