--- a/html/modify.html
+++ b/html/modify.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/modify.css" />
-    <title>개인정보 수정</title>
+    <title>손에 손 잡고</title>
 </head>
 
 <body>
